--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	</style>
 
 
-	<header class="container" style="margin-top:80px">		
+	<header class="container">		
 		<ul class="nav">
 			<li class="navbar-brand">
 				<a class="navbar-brand img-logo" href="/">
