Задание цвета для элемента через ColorPick

--- a/panel.html
+++ b/panel.html
@@ -51,7 +51,7 @@
 					<i class="fa fa-bold"></i>
 				</button>
 				<div class="btn-group">
-					<button type="button" class="btn btn-outline-info dropdown-toggle" data-toggle="dropdown">
+					<button type="button" class="btn btn-outline-info dropdown-toggle-" data-toggle="dropdown">
 						<i class="fa fa-text-height"></i>
 					</button>
 					<div class="dropdown-menu">
@@ -67,6 +67,7 @@
 						<button class="dropdown-item" data-format="size" data-val="40">40</button>
 				    </div>
 				</div>
+				<!--
 				<div class="btn-group">
 					<button type="button" class="btn btn-outline-info dropdown-toggle" data-toggle="dropdown">
 						<i class="fa fa-tint"></i>
@@ -79,7 +80,11 @@
 						<button class="dropdown-item" data-format="color" data-val="#090">Зелёный</button>
 						<button class="dropdown-item" data-format="color" data-val="#009">Синий</button>
 				    </div>
-				</div>					
+				</div>
+				-->
+				<button type="button" class="btn btn-outline-info" data-color="elem">
+					<i class="fa fa-tint"></i>
+				</button>
 				<button type="button" class="btn btn-outline-info" data-upload="img">
 					<i class="fa fa-upload"></i> Загрузить изображение
 				</button>
