Подсказка при наведении на редактируемую картинку

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   			max-width: 250px;
 			max-height: 100px;
 			margin-top: -10%;
+			position: relative;
   		}
   		.img-wrap {
 		    max-width: 100%;
