--- a/panel.html
+++ b/panel.html
@@ -85,8 +85,19 @@
 				<button type="button" class="btn btn-outline-info" data-color="elem">
 					<i class="fa fa-tint"></i>
 				</button>
-				<button type="button" class="btn btn-outline-info" data-upload="img">
+			</div>
+			<div class="btn-group">
+				<button type="button" class="btn btn-outline-info" data-image="upload">
 					<i class="fa fa-upload"></i> Загрузить изображение
+				</button>
+				<button type="button" class="btn btn-outline-info" data-image="less">
+					<i class="fa fa-search-minus"></i>
+				</button>
+				<button type="button" class="btn btn-outline-info" data-image="more">
+					<i class="fa fa-search-plus"></i>
+				</button>
+				<button type="button" class="btn btn-outline-info" data-image="scaleX">
+					<i class="fa fa-adjust"></i>
 				</button>
 			</div>
 
