--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<a class="nav-link" href="#" data-edit="txt" data-group="1">Link</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link disabled" href="#">Disabled</a>
+				<a class="nav-link disabled" href="#" data-edit="txt" data-group="1">Disabled</a>
 			</li>
 		</ul> 
 	</header>
